# wasminwasm

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  index.html
go/: go.mod
go/cmd/: main.go
src/: lib.rs  main.rs  zig_wasm.rs
zig/: .gitignore
zig/src/: export.zig
