[package]
name = "wasminwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.10", features=["js"] }
js-sys = "0.3.64"
leptos = { version = "0.5.0", features = ["nightly", "csr"] }
leptos_meta = "0.5.0"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"

